--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.bg-container {
+  display: flex;
+}
 
 .task-container {
   background-color: #131213;
@@ -20,7 +23,7 @@ body {
   align-items: center;
 }
 
-.task-heading {
+.task {
   margin: 0px;
   color: #f3aa4e;
   font-family: 'Roboto';
@@ -55,4 +58,61 @@ body {
 }
 .input-con {
   margin-top: 25px;
+}
+.task-view-container {
+  background-color: #000000;
+  height: 100vh;
+  width: 60%;
+}
+.tag-heading {
+  color: #f1f5f9;
+  font-family: 'Roboto';
+  font-size: 22px;
+  margin: 0px;
+  padding-top: 60px;
+  padding-left: 10px;
+}
+.task-heading {
+  color: #f1f5f9;
+  font-family: 'Roboto';
+  font-size: 22px;
+  margin: 0px;
+  padding: 0px;
+  padding-left: 10px;
+}
+.btn-ul {
+  list-style-type: none;
+  padding: 0px;
+  display: flex;
+  padding-left: 10px;
+}
+
+.no-tasks {
+  color: #f1f5f9;
+  font-size: 20px;
+  font-weight: 600;
+}
+.no-tasks-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+}
+.ul {
+  list-style-type: none;
+  padding: 0px;
+}
+.button {
+  background-color: transparent;
+  border-radius: 10px;
+  border: 1px solid #f3aa4e;
+  color: #ffffff;
+  font-family: 'Roboto';
+  font-size: 10px;
+  width: auto;
+  height: 22px;
+  margin-right: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
